[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/test_scene_3.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="test_scene_3" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 302.391, 547.644 )
scale = Vector2( 7.59283, 10.7519 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 812.236, 547.644 )
scale = Vector2( 7.26319, 10.3124 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 1337.03, 539.733 )
scale = Vector2( 7.895, 9.95526 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 1673.7
margin_top = 444.796
margin_right = 1854.7
margin_bottom = 610.796
text = "Quit scene"

[node name="Button2" type="Button" parent="."]
margin_left = 109.001
margin_top = 26.3713
margin_right = 801.001
margin_bottom = 180.371
text = "Inapoi"

[node name="Button3" type="Button" parent="."]
margin_left = 1733.47
margin_top = 26.3713
margin_right = 1884.47
margin_bottom = 160.371
text = "SPLASH"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
